[gd_scene load_steps=9 format=3 uid="uid://b5o0cjqgref8e"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_nuphv"]
[ext_resource type="Texture2D" uid="uid://cpxv0ovmumlve" path="res://enemy/asdasdawdwadawfawerf.png" id="2_3v0hh"]

[sub_resource type="Animation" id="Animation_qfvsf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_m28n6"]
resource_name = "idle"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_005ig"]
_data = {
"RESET": SubResource("Animation_qfvsf"),
"tombie": SubResource("Animation_m28n6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1jwww"]
radius = 115.27

[sub_resource type="CircleShape2D" id="CircleShape2D_qjgnl"]
radius = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqf60"]
size = Vector2(80.5, 61)

[node name="enemy" type="CharacterBody2D"]
position = Vector2(-2, 0)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_nuphv")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(2, -17)
scale = Vector2(0.732495, 1.17784)
texture = ExtResource("2_3v0hh")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Shadow")
libraries = {
"": SubResource("AnimationLibrary_005ig")
}

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(2, -14)
shape = SubResource("CircleShape2D_1jwww")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -14)
shape = SubResource("CircleShape2D_qjgnl")

[node name="hitbox_enemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_enemy"]
position = Vector2(2, -14)
shape = SubResource("RectangleShape2D_fqf60")

[node name="Enem_HP" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
offset_left = -7.0
offset_top = 2.0
offset_right = 31.0
offset_bottom = 11.0
scale = Vector2(0.5, 0.5)
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="take_damage" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox_enemy" to="." method="_on_hitbox_enemy_body_entered"]
[connection signal="body_exited" from="hitbox_enemy" to="." method="_on_hitbox_enemy_body_exited"]
[connection signal="timeout" from="take_damage" to="." method="_on_take_damage_timeout"]
